# mirage

./: README.md  main.py  mirage_cli.py  pyproject.toml  scratch_test.py
docs/: mirage_parity_matrix.md  serve.md  spec.md
src/: __init__.py  __main__.py  config.py  config_store.py  theme.py
src/agents/: __init__.py  developer.py  factory.py  graph.py  instructions.py  project_manager.py  prompts.py  routing.py  state.py  supervisor.py  ux_ui_designer.py
src/cli/: __init__.py  agent_registry.py  app.py  edit_history.py  input_box.py  local_state.py  mirage_compat.py  model_form.py  modes.py  policy.py  project_paths.py  render.py  runtime_state.py  session.py  session_events.py
src/llm/: __init__.py  catalog.py  factory.py  spec.py
src/sessions/: __init__.py  store.py
src/tools/: __init__.py  catalog.py  filesystem.py  git_tools.py  mcp_tools.py  notebook_tools.py  search.py  shell.py  web_tools.py
tests/: test_agent_routing.py  test_cli_run_parity.py  test_cli_session_parity.py  test_mcp_management.py  test_mirage_compat.py  test_runtime_session_store.py  test_session_selector.py
