[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirage-cli"
version = "0.1.0"
description = "Mirage 5 multi-agent CLI powered by LangGraph."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.17",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=1.2.1",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langgraph>=1.1.10",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.4",
    "rich>=13.9.0",
    "typer>=0.25.1",
]

[project.scripts]
mirage = "mirage_cli:main"
mirage-cli = "mirage_cli:main"

[tool.setuptools]
py-modules = ["mirage_cli"]

[tool.setuptools.packages.find]
include = ["src*"]
